[package]
name = "godot_rust_yaml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master", features = ["experimental-wasm", "lazy-function-tables"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.100"
serde_yaml = "0.9"
